--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -47,6 +47,8 @@ tile.ebwizardry\:jungle_lectern.name=Jungle Lectern
 tile.ebwizardry\:acacia_lectern.name=Acacia Lectern
 tile.ebwizardry\:dark_oak_lectern.name=Dark Oak Lectern
 
+tile.ebwizardry\:receptacle.name=Receptacle
+
 item.ebwizardry\:crystal_magic.name=Magic Crystal
 item.ebwizardry\:crystal_magic.desc=The iridescent colours of this crystal seem to slowly shift and swirl, hinting at a magical energy within. Perhaps this magic could be harnessed in some way?
 item.ebwizardry\:crystal_fire.name=Fiery Crystal
