Add stormcloud spell

--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -485,6 +485,7 @@ entity.ebwizardry\:ring_of_fire.name=Ring of Fire
 entity.ebwizardry\:earthquake.name=Earthquake
 entity.ebwizardry\:hailstorm.name=Hailstorm
 entity.ebwizardry\:lightning_pulse.name=Lightning Pulse
+entity.ebwizardry\:stormcloud.name=Stormcloud
 
 itemGroup.ebwizardry=Wizardry
 itemGroup.ebwizardryspells=Spells
@@ -747,6 +748,7 @@ spell.ebwizardry\:spectral_pathway=Spectral Pathway
 spell.ebwizardry\:speed_time=Speed Time
 spell.ebwizardry\:spider_swarm=Spider Swarm
 spell.ebwizardry\:static_aura=Static Aura
+spell.ebwizardry\:stormcloud=Stormcloud
 spell.ebwizardry\:summon_blaze=Summon Blaze
 spell.ebwizardry\:summon_ice_giant=Summon Ice Giant
 spell.ebwizardry\:summon_ice_wraith=Summon Ice Wraith
@@ -921,6 +923,7 @@ spell.ebwizardry\:spectral_pathway.desc=Creates an indestructible magical bridge
 spell.ebwizardry\:speed_time.desc=...day, night, dawn, dusk, sunrise and sunset\: thus is the passage of time, which traps us in an endless cycle of...
 spell.ebwizardry\:spider_swarm.desc=Summons a swarm of venomous spiders to fight for you. The spiders will disappear after 30 seconds or if they are killed.
 spell.ebwizardry\:static_aura.desc=Surrounds the caster with lightning for 30 seconds, firing a spark of lightning at anything that hits them.
+spell.ebwizardry\:stormcloud.desc=Conjures a floating stormcloud where you are pointing that strikes lightning beneath it.
 spell.ebwizardry\:summon_blaze.desc=Summons a blaze to fight for you. The blaze will disappear after 30 seconds or if it is killed.
 spell.ebwizardry\:summon_ice_giant.desc="Smash them!"
 spell.ebwizardry\:summon_ice_wraith.desc=Summons an ice wraith to fight for you. The ice wraith will disappear after 30 seconds or if it is killed.
