Allow crystal flowers to be placed in flower pots

--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -16,6 +16,7 @@ tile.ebwizardry\:runestone_pedestal.name=Runestone Pedestal
 tile.ebwizardry\:thorns.name=Thorns
 tile.ebwizardry\:obsidian_crust.name=Obsidian Crust
 tile.ebwizardry\:dry_frosted_ice.name=Dry Frosted Ice
+tile.ebwizardry\:crystal_flower_pot.name=Flower Pot
 
 tile.ebwizardry\:magic_crystal_block.name=Block of Crystal
 tile.ebwizardry\:fire_crystal_block.name=Block of Fiery Crystal
