Add config option to treat passive creatures as allies

--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -1193,6 +1193,10 @@ config.ebwizardry.legacy_wand_levelling.true=Yes - I liked it how it was!
 config.ebwizardry.legacy_wand_levelling.false=No - Level me up!
 config.ebwizardry.friendly_fire=Friendly Fire
 config.ebwizardry.friendly_fire.tooltip=Controls which creatures may be damaged by your magic when allied to you. Your spells will not target your allies or creatures summoned/owned by them regardless of this setting, but this setting makes them completely immune if disabled.
+config.ebwizardry.passive_mobs_are_allies=Passive Mobs Are Allies
+config.ebwizardry.passive_mobs_are_allies.tooltip=Whether passive mobs should count as allies, i.e. they should not be targeted by minions, lightning chaining, etc.
+config.ebwizardry.passive_mobs_are_allies.true=Yes - don't hurt the animals!
+config.ebwizardry.passive_mobs_are_allies.false=No - I like my steak phoenix-grilled!
 config.ebwizardry.minion_revenge_targeting=Minion Revenge Targeting
 config.ebwizardry.minion_revenge_targeting.tooltip=Whether summoned creatures can revenge-attack players or creatures that they would not otherwise be able to attack.
 config.ebwizardry.minion_revenge_targeting.true=Yes - I'd never hurt them!
