Add elemental banner patterns

--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -404,6 +404,125 @@ item.charge_status.mostly_empty=Mostly empty
 item.charge_status.almost_empty=Almost empty
 item.charge_status.empty=Empty
 
+item.banner.wizardry_fire.black=Black Fire Emblem
+item.banner.wizardry_fire.red=Red Fire Emblem
+item.banner.wizardry_fire.green=Green Fire Emblem
+item.banner.wizardry_fire.brown=Brown Fire Emblem
+item.banner.wizardry_fire.blue=Blue Fire Emblem
+item.banner.wizardry_fire.purple=Purple Fire Emblem
+item.banner.wizardry_fire.cyan=Cyan Fire Emblem
+item.banner.wizardry_fire.silver=Light Gray Fire Emblem
+item.banner.wizardry_fire.gray=Gray Fire Emblem
+item.banner.wizardry_fire.pink=Pink Fire Emblem
+item.banner.wizardry_fire.lime=Lime Fire Emblem
+item.banner.wizardry_fire.yellow=Yellow Fire Emblem
+item.banner.wizardry_fire.lightBlue=Light Blue Fire Emblem
+item.banner.wizardry_fire.magenta=Magenta Fire Emblem
+item.banner.wizardry_fire.orange=Orange Fire Emblem
+item.banner.wizardry_fire.white=White Fire Emblem
+
+item.banner.wizardry_ice.black=Black Ice Emblem
+item.banner.wizardry_ice.red=Red Ice Emblem
+item.banner.wizardry_ice.green=Green Ice Emblem
+item.banner.wizardry_ice.brown=Brown Ice Emblem
+item.banner.wizardry_ice.blue=Blue Ice Emblem
+item.banner.wizardry_ice.purple=Purple Ice Emblem
+item.banner.wizardry_ice.cyan=Cyan Ice Emblem
+item.banner.wizardry_ice.silver=Light Gray Ice Emblem
+item.banner.wizardry_ice.gray=Gray Ice Emblem
+item.banner.wizardry_ice.pink=Pink Ice Emblem
+item.banner.wizardry_ice.lime=Lime Ice Emblem
+item.banner.wizardry_ice.yellow=Yellow Ice Emblem
+item.banner.wizardry_ice.lightBlue=Light Blue Ice Emblem
+item.banner.wizardry_ice.magenta=Magenta Ice Emblem
+item.banner.wizardry_ice.orange=Orange Ice Emblem
+item.banner.wizardry_ice.white=White Ice Emblem
+
+item.banner.wizardry_lightning.black=Black Lightning Emblem
+item.banner.wizardry_lightning.red=Red Lightning Emblem
+item.banner.wizardry_lightning.green=Green Lightning Emblem
+item.banner.wizardry_lightning.brown=Brown Lightning Emblem
+item.banner.wizardry_lightning.blue=Blue Lightning Emblem
+item.banner.wizardry_lightning.purple=Purple Lightning Emblem
+item.banner.wizardry_lightning.cyan=Cyan Lightning Emblem
+item.banner.wizardry_lightning.silver=Light Gray Lightning Emblem
+item.banner.wizardry_lightning.gray=Gray Lightning Emblem
+item.banner.wizardry_lightning.pink=Pink Lightning Emblem
+item.banner.wizardry_lightning.lime=Lime Lightning Emblem
+item.banner.wizardry_lightning.yellow=Yellow Lightning Emblem
+item.banner.wizardry_lightning.lightBlue=Light Blue Lightning Emblem
+item.banner.wizardry_lightning.magenta=Magenta Lightning Emblem
+item.banner.wizardry_lightning.orange=Orange Lightning Emblem
+item.banner.wizardry_lightning.white=White Lightning Emblem
+
+item.banner.wizardry_necromancy.black=Black Necromancy Emblem
+item.banner.wizardry_necromancy.red=Red Necromancy Emblem
+item.banner.wizardry_necromancy.green=Green Necromancy Emblem
+item.banner.wizardry_necromancy.brown=Brown Necromancy Emblem
+item.banner.wizardry_necromancy.blue=Blue Necromancy Emblem
+item.banner.wizardry_necromancy.purple=Purple Necromancy Emblem
+item.banner.wizardry_necromancy.cyan=Cyan Necromancy Emblem
+item.banner.wizardry_necromancy.silver=Light Gray Necromancy Emblem
+item.banner.wizardry_necromancy.gray=Gray Necromancy Emblem
+item.banner.wizardry_necromancy.pink=Pink Necromancy Emblem
+item.banner.wizardry_necromancy.lime=Lime Necromancy Emblem
+item.banner.wizardry_necromancy.yellow=Yellow Necromancy Emblem
+item.banner.wizardry_necromancy.lightBlue=Light Blue Necromancy Emblem
+item.banner.wizardry_necromancy.magenta=Magenta Necromancy Emblem
+item.banner.wizardry_necromancy.orange=Orange Necromancy Emblem
+item.banner.wizardry_necromancy.white=White Necromancy Emblem
+
+item.banner.wizardry_earth.black=Black Earth Emblem
+item.banner.wizardry_earth.red=Red Earth Emblem
+item.banner.wizardry_earth.green=Green Earth Emblem
+item.banner.wizardry_earth.brown=Brown Earth Emblem
+item.banner.wizardry_earth.blue=Blue Earth Emblem
+item.banner.wizardry_earth.purple=Purple Earth Emblem
+item.banner.wizardry_earth.cyan=Cyan Earth Emblem
+item.banner.wizardry_earth.silver=Light Gray Earth Emblem
+item.banner.wizardry_earth.gray=Gray Earth Emblem
+item.banner.wizardry_earth.pink=Pink Earth Emblem
+item.banner.wizardry_earth.lime=Lime Earth Emblem
+item.banner.wizardry_earth.yellow=Yellow Earth Emblem
+item.banner.wizardry_earth.lightBlue=Light Blue Earth Emblem
+item.banner.wizardry_earth.magenta=Magenta Earth Emblem
+item.banner.wizardry_earth.orange=Orange Earth Emblem
+item.banner.wizardry_earth.white=White Earth Emblem
+
+item.banner.wizardry_sorcery.black=Black Sorcery Emblem
+item.banner.wizardry_sorcery.red=Red Sorcery Emblem
+item.banner.wizardry_sorcery.green=Green Sorcery Emblem
+item.banner.wizardry_sorcery.brown=Brown Sorcery Emblem
+item.banner.wizardry_sorcery.blue=Blue Sorcery Emblem
+item.banner.wizardry_sorcery.purple=Purple Sorcery Emblem
+item.banner.wizardry_sorcery.cyan=Cyan Sorcery Emblem
+item.banner.wizardry_sorcery.silver=Light Gray Sorcery Emblem
+item.banner.wizardry_sorcery.gray=Gray Sorcery Emblem
+item.banner.wizardry_sorcery.pink=Pink Sorcery Emblem
+item.banner.wizardry_sorcery.lime=Lime Sorcery Emblem
+item.banner.wizardry_sorcery.yellow=Yellow Sorcery Emblem
+item.banner.wizardry_sorcery.lightBlue=Light Blue Sorcery Emblem
+item.banner.wizardry_sorcery.magenta=Magenta Sorcery Emblem
+item.banner.wizardry_sorcery.orange=Orange Sorcery Emblem
+item.banner.wizardry_sorcery.white=White Sorcery Emblem
+
+item.banner.wizardry_healing.black=Black Healing Emblem
+item.banner.wizardry_healing.red=Red Healing Emblem
+item.banner.wizardry_healing.green=Green Healing Emblem
+item.banner.wizardry_healing.brown=Brown Healing Emblem
+item.banner.wizardry_healing.blue=Blue Healing Emblem
+item.banner.wizardry_healing.purple=Purple Healing Emblem
+item.banner.wizardry_healing.cyan=Cyan Healing Emblem
+item.banner.wizardry_healing.silver=Light Gray Healing Emblem
+item.banner.wizardry_healing.gray=Gray Healing Emblem
+item.banner.wizardry_healing.pink=Pink Healing Emblem
+item.banner.wizardry_healing.lime=Lime Healing Emblem
+item.banner.wizardry_healing.yellow=Yellow Healing Emblem
+item.banner.wizardry_healing.lightBlue=Light Blue Healing Emblem
+item.banner.wizardry_healing.magenta=Magenta Healing Emblem
+item.banner.wizardry_healing.orange=Orange Healing Emblem
+item.banner.wizardry_healing.white=White Healing Emblem
+
 entity.ebwizardry\:summonedcreature.nameplate=%1$s's %2$s
 entity.ebwizardry\:summonedcreature.nameplate_fallback=Someone's %1$s
 
