Add imbuement altar - Adds imbuement altar block and associated tile entity - Adds basic functionality for imbuing wizard armour (other stuff to be decided) - Incorporates imbuement altar into glowing overlay model event (this could do with being tidied up and generalised) - Adds a TESR for the ray effect (based on some of the oldest code in the entire mod, which definitely needs improving!) - Adds a simple sound effect for the imbuement process, needs upgrading to a ticked sound later

--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -49,6 +49,7 @@ tile.ebwizardry\:acacia_lectern.name=Acacia Lectern
 tile.ebwizardry\:dark_oak_lectern.name=Dark Oak Lectern
 
 tile.ebwizardry\:receptacle.name=Receptacle
+tile.ebwizardry\:imbuement_altar.name=Imbuement Altar
 
 item.ebwizardry\:crystal_magic.name=Magic Crystal
 item.ebwizardry\:crystal_magic.desc=The iridescent colors of this crystal seem to slowly shift and swirl, hinting at a magical energy within. Perhaps this magic could be harnessed, somehow...
