Add blindness tweak and stop smoke bombs giving the mind trick effect

--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -1359,6 +1359,8 @@ config.ebwizardry.replace_vanilla_fall_damage=Replace Vanilla Fall Damage
 config.ebwizardry.replace_vanilla_fall_damage.tooltip=Whether to replace Minecraft's distance-based fall damage calculation with an equivalent, velocity-based one. This is done such that mobs in freefall will take exactly the same damage as normal, so it will not break falling-based mob farms. Disable this if you experience falling-related weirdness! If this is disabled, some spells revert to a more simplistic method of resetting the player's fall damage in certain cases.
 config.ebwizardry.replace_vanilla_fall_damage.true=Yes - it's parkour time
 config.ebwizardry.replace_vanilla_fall_damage.false=No - break my legs normally
+config.ebwizardry.blindness_tweak=Blindness Tweak
+config.ebwizardry.blindness_tweak.tooltip=Whether to tweak the blindness effect to reduce follow distance when used on non-players. This automatically disables itself in favour of Potion Core's implementation if installed.
 config.ebwizardry.mob_loot_table_whitelist=Mob Loot Table Whitelist
 config.ebwizardry.mob_loot_table_whitelist.tooltip=Whitelist for loot tables to inject additional mob drops (as specified in loot_tables/entities/mob_additions.json) into. Wizardry makes a best guess as to which loot tables belong to hostile mobs, but this may not always be correct or appropriate; add loot table locations (not entity IDs) to this list to manually include them.
 config.ebwizardry.mob_loot_table_blacklist=Mob Loot Table Blacklist
