Add blinding flash spell

--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -742,6 +742,7 @@ spell.ebwizardry\:arcane_lock=Arcane Lock
 spell.ebwizardry\:arrow_rain=Arrow Rain
 spell.ebwizardry\:banish=Banish
 spell.ebwizardry\:black_hole=Black Hole
+spell.ebwizardry\:blinding_flash=Blinding Flash
 spell.ebwizardry\:blink=Blink
 spell.ebwizardry\:blizzard=Blizzard
 spell.ebwizardry\:bubble=Bubble
@@ -918,6 +919,7 @@ spell.ebwizardry\:arcane_lock.desc=Creates an impenetrable barrier of force arou
 spell.ebwizardry\:arrow_rain.desc="Archers, fire!"
 spell.ebwizardry\:banish.desc=Teleports the target against its will to a random location within a certain range.
 spell.ebwizardry\:black_hole.desc=Tear reality asunder.
+spell.ebwizardry\:blinding_flash.desc=Emits an intense flash of light that blinds all nearby creatures.
 spell.ebwizardry\:blink.desc=Teleports the caster over a short distance to where they are pointing.
 spell.ebwizardry\:blizzard.desc=Creates a zone of swirling icy wind which slows and continually damages anything trapped inside. The caster is immune to the damage but is still slowed.
 spell.ebwizardry\:bubble.desc=Fires a jet of bubbles which causes anything it hits to float upwards helplessly. The target will fall after a certain time or if it is damaged.
