--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -370,6 +370,8 @@ item.ebwizardry\:charm_experience_tome.name=Tome of the Diligent
 item.ebwizardry\:charm_experience_tome.desc=Increases the rate at which wands gain progression by 50%%
 item.ebwizardry\:charm_move_speed.name=Icarus Medallion
 item.ebwizardry\:charm_move_speed.desc=Move at near-full speed when casting spells
+item.ebwizardry\:charm_spell_discovery.name=Archivist's Eyeglass
+item.ebwizardry\:charm_spell_discovery.desc=Spell books found in chests are much more likely to be ones you have not yet discovered
 item.ebwizardry\:charm_auto_smelt.name=Metallurgist's Mark
 item.ebwizardry\:charm_auto_smelt.desc=Pocket furnace triggers automatically when bound to a wand on your hotbar
 item.ebwizardry\:charm_lava_walking.name=Nether Ice Core
@@ -396,6 +398,8 @@ item.ebwizardry\:charm_transportation.name=Ancient Compass
 item.ebwizardry\:charm_transportation.desc=Up to four stone circles may be remembered and selected from when using transportation
 item.ebwizardry\:charm_black_hole.name=Void Opal
 item.ebwizardry\:charm_black_hole.desc=Black hole sucks in and destroys blocks
+item.ebwizardry\:charm_mount_teleporting.name=Spectral Tether
+item.ebwizardry\:charm_mount_teleporting.desc=Teleporting while riding an animal or vehicle brings it with you
 item.ebwizardry\:charm_feeding.name=Bottomless Provisions
 item.ebwizardry\:charm_feeding.desc=Replenish hunger and satiety trigger automatically when bound to a wand on your hotbar
 
