Add firestorm spell

--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -785,6 +785,7 @@ spell.ebwizardry\:firebomb=Firebomb
 spell.ebwizardry\:fire_resistance=Fire Resistance
 spell.ebwizardry\:fire_sigil=Fire Sigil
 spell.ebwizardry\:fireskin=Fireskin
+spell.ebwizardry\:firestorm=Firestorm
 spell.ebwizardry\:fire_breath=Fire Breath
 spell.ebwizardry\:flame_ray=Flame Ray
 spell.ebwizardry\:flaming_axe=Flaming Axe
@@ -962,6 +963,7 @@ spell.ebwizardry\:firebomb.desc=Lanches a firebomb in the direction you are poin
 spell.ebwizardry\:fire_resistance.desc=Grants the caster fire resistance for 30 seconds.
 spell.ebwizardry\:fire_sigil.desc=Places a magical fire trap on the ground which damages and sets on fire the creature that triggers it.
 spell.ebwizardry\:fireskin.desc=Cloaks the caster in flames for 30 seconds, causing anything that attacks them to catch fire.
+spell.ebwizardry\:firestorm.desc="Purge the land and purge the soil!\nTrees shall burn and lakes shall boil!\nTorch the wood and scorch the stone!\nAll bow before the fiery throne!"
 spell.ebwizardry\:fire_breath.desc="I am the dragon."
 spell.ebwizardry\:flame_ray.desc=Creates a stream of flames in the direction you are pointing which sets on fire and continually damages targets.
 spell.ebwizardry\:flaming_axe.desc=Creates a flaming axe which sets enemies on fire when hit. Lasts for 30 seconds.
