--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -862,6 +862,7 @@ spell.ebwizardry\:pocket_workbench=Pocket Workbench
 spell.ebwizardry\:poison=Poison
 spell.ebwizardry\:poison_bomb=Poison Bomb
 spell.ebwizardry\:possession=Possession
+spell.ebwizardry\:radiant_totem=Radiant Totem
 spell.ebwizardry\:ray_of_purification=Ray of Purification
 spell.ebwizardry\:remove_curse=Remove Curse
 spell.ebwizardry\:replenish_hunger=Replenish Hunger
@@ -1040,6 +1041,7 @@ spell.ebwizardry\:pocket_workbench.desc=Allows the caster to craft items as if t
 spell.ebwizardry\:poison.desc=Fires poison in the direction you are pointing.
 spell.ebwizardry\:poison_bomb.desc=Lanches a poison bomb in the direction you are pointing which explodes on impact, poisoning nearby creatures.
 spell.ebwizardry\:possession.desc="Become thy enemy."
+spell.ebwizardry\:radiant_totem.desc=Creates a radiant totem which shoots a beam of light at nearby creatures, healing allies but damaging mobs. Lasts for 30 seconds. Potency will increase the number of targets.
 spell.ebwizardry\:ray_of_purification.desc=Emits a ray of blinding light that damages and blinds its targets. Undead creatures take double damage and are set on fire.
 spell.ebwizardry\:remove_curse.desc=Removes any curse currently affecting the caster.
 spell.ebwizardry\:replenish_hunger.desc=Replenishes the caster's food level by 3 hunger points.
