--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -779,6 +779,7 @@ spell.ebwizardry\:earthquake=Earthquake
 spell.ebwizardry\:empowering_presence=Empowering Presence
 spell.ebwizardry\:entrapment=Entrapment
 spell.ebwizardry\:evade=Evade
+spell.ebwizardry\:fangs=Fangs
 spell.ebwizardry\:fireball=Fireball
 spell.ebwizardry\:firebolt=Firebolt
 spell.ebwizardry\:firebomb=Firebomb
@@ -958,6 +959,7 @@ spell.ebwizardry\:earthquake.desc=A true master of earth magic can move mountain
 spell.ebwizardry\:empowering_presence.desc=Grants the caster and nearby allies increased magic damage for 30 seconds.
 spell.ebwizardry\:entrapment.desc=Traps the target in a sphere of darkness which pulls it helplessly upwards and continually damages it.
 spell.ebwizardry\:evade.desc=Causes the caster to quickly jump sideways to dodge incoming attacks.
+spell.ebwizardry\:fangs.desc=Summons a row of evoker fangs in front of the caster that rise from the ground, biting mobs in their path.
 spell.ebwizardry\:fireball.desc=Launches a fireball in the direction you are pointing.
 spell.ebwizardry\:firebolt.desc=Shoots a jet of fire a short distance in front of you.
 spell.ebwizardry\:firebomb.desc=Lanches a firebomb in the direction you are pointing which explodes on impact, setting targets on fire.
